--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NABARAWY_THINK\\MSSQLSERVER2022;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=NABARAWY_THINK\\MSSQLSERVER2022;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BulkyWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
